registry/kubefirst/components/chartmuseum/ingressroute.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: chartmuseum
  namespace: chartmuseum
  annotations:
    argocd.argoproj.io/sync-wave: "10"
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`chartmuseum.kubefirst.dev`)
      services:
        - name: chartmuseum
          port: 80
  tls:
    secretName: chartmuseum-tls
